Updated Message and MessageDto